Updated page User hub/bg

--- a/wiki/bg/User_hub.html
+++ b/wiki/bg/User_hub.html
@@ -137,12 +137,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111192739
+Cached time: 20260111220246
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.101 seconds
-Real time usage: 0.136 seconds
+CPU time usage: 0.123 seconds
+Real time usage: 0.238 seconds
 Preprocessor visited node count: 294/1000000
 Post&#8208;expand include size: 6635/2097152 bytes
 Template argument size: 2013/2097152 bytes
@@ -153,17 +153,17 @@ Unstrip post&#8208;expand size: 4269/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.220      1 -total
- 43.34%    5.296      1 Template:Userdocnavi/bg
- 18.65%    2.279      1 Template:Navigation_menu_2
- 12.30%    1.503      7 Template:Incode
-  9.83%    1.201      2 Template:VersionMinus
-  9.63%    1.177      3 Template:Version
-  9.13%    1.116      1 Template:TOCright
-  8.73%    1.067      1 Template:Button
+100.00%   13.827      1 -total
+ 40.25%    5.566      1 Template:Userdocnavi/bg
+ 21.70%    3.001      2 Template:VersionMinus
+ 20.88%    2.887      1 Template:Navigation_menu_2
+  9.03%    1.248      7 Template:Incode
+  8.65%    1.196      1 Template:TOCright
+  6.73%    0.930      3 Template:Version
+  5.74%    0.794      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77148-0!canonical and timestamp 20260111192738 and revision id 1735833. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77148-0!canonical and timestamp 20260111220246 and revision id 1735833. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
