--- a/wiki/de/TechDraw_SpreadsheetView.html
+++ b/wiki/de/TechDraw_SpreadsheetView.html
@@ -1,21 +1,18 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw SpreadsheetView/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+SpreadsheetView&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../TechDraw_SpreadsheetView.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw SpreadsheetView (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/TechDraw_SpreadsheetView.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw Vue d'un objet Spreadsheet (72% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/TechDraw_SpreadsheetView.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw: Vista di un foglio di calcolo (72% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_SpreadsheetView.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Wstaw widok Arkusza kalkulacyjnego (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/TechDraw_SpreadsheetView.html" class="mw-pt-progress mw-pt-progress--low" title="Visualizar planilha do TechDraw (6% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ru/TechDraw_SpreadsheetView.html" class="mw-pt-progress mw-pt-progress--med" title='TechDraw "&#1042;&#1089;&#1090;&#1072;&#1074;&#1080;&#1090;&#1100; &#1101;&#1083;&#1077;&#1082;&#1090;&#1088;&#1086;&#1085;&#1085;&#1091;&#1102; &#1090;&#1072;&#1073;&#1083;&#1080;&#1094;&#1091;" (22% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ArchView.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_ArchView.html" title="TechDraw ArchView/de">ArchAnsicht</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_StackTop.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_StackTop.html" title="TechDraw StackTop/de">StapelOberseite</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_Dimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_Dimension.html" title="TechDraw Dimension/de">StapelOberseite</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-</div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -26,7 +23,7 @@
 <th class="ctOdd">Men&uuml;eintrag
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Views From Other Workbenches &rarr; Tabellenansicht einf&uuml;gen
+<td class="ctEven">TechDraw &rarr; Ansichten anderer Arbeitsbereiche &rarr; Tabellenansicht
 </td></tr>
 <tr>
 <th class="ctOdd">Arbeitsbereich
@@ -55,7 +52,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
@@ -67,21 +63,19 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Anwendung">Anwendung</span></h2>
-<div class="mw-translate-fuzzy">
-<ol><li>Ein Tabellenblatt in der <a href="../de/Tree_view.html" class="mw-redirect" title="Tree view/de">Baumansicht</a> ausw&auml;hlen.</li>
-<li>Wenn mehrere Zeichnungsbl&auml;tter im Dokument vorhanden sind: Wahlweise das gew&uuml;nschte Zeichnungsblatt durch Ausw&auml;hlen in der <a href="../de/Tree_view.html" class="mw-redirect" title="Tree view/de">Baumansicht</a> zur Auswahl hinzuf&uuml;gen.</li>
-<li>Den Men&uuml;eintrag <b>TechDraw &rarr; Ansichten von anderen Arbeitsbereichen &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_SpreadsheetView.svg&amp;filetimestamp=20241127175341&amp;.html" class="mw-file-description"><img src="../File/TechDraw_SpreadsheetView.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Tabellenansicht einf&uuml;gen</b> ausw&auml;hlen.</li>
-<li>Wenn mehrere Zeichnungsbl&auml;tter im Dokument vorhanden sind und kein Blatt im <a href="../de/Main_view_area.html" class="mw-redirect" title="Main view area/de">Hauptansichtsbereich</a> angezeigt wird und au&szlig;erdem noch kein Blatt aktiviert wurde, wird das Dialogfeld <b>Blattauswahl</b> ge&ouml;ffnet:
+<ol><li>Ein Tabellenblatt in der <a href="../de/Tree_View.html" title="Tree View/de">Baumansicht</a> ausw&auml;hlen.</li>
+<li>Wenn mehrere Zeichnungsbl&auml;tter im Dokument vorhanden sind: Wahlweise das gew&uuml;nschte Zeichnungsblatt durch Ausw&auml;hlen in der <a href="../de/Tree_View.html" title="Tree View/de">Baumansicht</a> zur Auswahl hinzuf&uuml;gen.</li>
+<li>Den Men&uuml;eintrag <b>TechDraw &rarr; Ansichten anderer Arbeitsbereiche &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_SpreadsheetView.svg&amp;filetimestamp=20241127175341&amp;.html" class="mw-file-description"><img src="../File/TechDraw_SpreadsheetView.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Tabellenansicht</b> ausw&auml;hlen.</li>
+<li>Wenn mehrere Zeichnungsbl&auml;tter im Dokument vorhanden sind und kein Blatt im <a href="../de/Main_View_Area.html" title="Main View Area/de">Hauptansichtsbereich</a> angezeigt wird und au&szlig;erdem noch kein Blatt aktiviert wurde, wird das Dialogfeld <b>Blattauswahl</b> ge&ouml;ffnet:
 <ol><li>Das gew&uuml;nschte Blatt ausw&auml;hlen.</li>
 <li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> dr&uuml;cken.</li></ol></li>
 <li>Eine Tabellenansicht wird eingef&uuml;gt</li>
 <li>Den Zellenbereich anpassen, indem die <span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Cell Start</b> und die <span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Cell End</b> ge&auml;ndert werden.</li></ol>
-</div>
 <p><span id="Properties"></span>
 </p>
 <h2><span class="mw-headline" id="Eigenschaften">Eigenschaften</span></h2>
 <p>Siehe auch: <a href="../de/Property_View.html" title="Property View/de">Eigenschaften-Ansicht</a>.
-</p><p>Eine Tabellenansicht, oder formal ein <code>TechDraw::DrawViewSpreadsheet</code>-Objekt, besitzt die gemeinsamen <a href="../de/TechDraw_View.html#Eigenschaften_der_Bauteilansicht" title="TechDraw View/de">Eigenschaften</a> aller Ansichtsarten. Sie enth&auml;lt au&szlig;erdem die folgenden Eigenschaften:
+</p><p>Eine Tabellenansicht, oder formal ein <code>TechDraw::DrawViewSpreadsheet</code>-Objekt, besitzt die gemeinsamen <a href="../de/TechDraw_View.html#Properties_Part_View" title="TechDraw View/de">Eigenschaften</a> aller Ansichtsarten. Sie enth&auml;lt au&szlig;erdem die folgenden Eigenschaften:
 </p><p><span id="Data"></span>
 </p>
 <h3><span class="mw-headline" id="Daten">Daten</span></h3>
@@ -101,14 +95,12 @@
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Line Width</b><span style="font-size:80%;"> (<code>Float</code>)</span> (Strichst&auml;rke): Die Breite der Zellr&auml;nder.</li></ul>
 <p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ArchView.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_ArchView.html" title="TechDraw ArchView/de">ArchAnsicht</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_StackTop.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_StackTop.html" title="TechDraw StackTop/de">StapelOberseite</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_Dimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_Dimension.html" title="TechDraw Dimension/de">StapelOberseite</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
@@ -145,35 +137,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111074106
+Cached time: 20260111215540
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.080 seconds
-Real time usage: 0.143 seconds
-Preprocessor visited node count: 735/1000000
-Post&#8208;expand include size: 33220/2097152 bytes
-Template argument size: 11748/2097152 bytes
+CPU time usage: 0.074 seconds
+Real time usage: 0.096 seconds
+Preprocessor visited node count: 731/1000000
+Post&#8208;expand include size: 33207/2097152 bytes
+Template argument size: 11731/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1717/5000000 bytes
+Unstrip post&#8208;expand size: 1721/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   43.091      1 -total
- 21.87%    9.424     12 Template:PropertyData/de
- 13.86%    5.971      1 Template:TechDraw_Tools_navi/de
- 13.04%    5.620     12 Template:Variable
- 12.81%    5.518      2 Template:TitleProperty
-  7.56%    3.259     11 Template:Incode
-  7.40%    3.189      2 Template:Navigation_menu_2
-  7.17%    3.091      1 Template:GuiCommand/de
-  6.97%    3.005      2 Template:Docnav/de
-  6.06%    2.611      2 Template:Version/de
+100.00%   28.519      1 -total
+ 20.81%    5.934     12 Template:PropertyData/de
+ 19.28%    5.498      1 Template:TechDraw_Tools_navi/de
+ 12.49%    3.563     12 Template:Variable
+ 10.72%    3.058      2 Template:Navigation_menu_2
+  8.65%    2.466      1 Template:GuiCommand/de
+  8.22%    2.345      2 Template:TitleProperty
+  7.60%    2.166      2 Template:Version/de
+  7.44%    2.121      2 Template:Docnav/de
+  6.89%    1.965     11 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:217738-0!canonical and timestamp 20260111074106 and revision id 1732172. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:217738-0!canonical and timestamp 20260111215540 and revision id 1736569. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
