--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -205,7 +205,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_LandmarkDimension.svg&amp;filetimestamp=20241126213916&amp;.html" class="mw-file-description"><img src="../File/TechDraw_LandmarkDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_LandmarkDimension.html" title="TechDraw LandmarkDimension/de">Ma&szlig; zwischen Orientierungspunkten einf&uuml;gen - EXPERIMENTELL</a>: F&uuml;gt ein Ma&szlig; zwischen zwei Orientierungspunkten hinzu. Steht in <span style="font-size:small;color:green;">1.1 und neuer</span> nicht mehr zur Verf&uuml;gung.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_LinkDimension.svg&amp;filetimestamp=20241126213852&amp;.html" class="mw-file-description"><img src="../File/TechDraw_LinkDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_LinkDimension.html" title="TechDraw LinkDimension/de">Ma&szlig; mit 3D-Geometrie verkn&uuml;pfen</a>: Verkn&uuml;pft ein vorhandenes Ma&szlig; mit der 3D-Geometrie (veraltet). Steht in <span style="font-size:small;color:green;">1.1 und neuer</span> nicht mehr zur Verf&uuml;gung.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_MoveView.svg&amp;filetimestamp=20220115191317&amp;.html" class="mw-file-description"><img src="../File/TechDraw_MoveView.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_MoveView.html" title="TechDraw MoveView/de">Ansicht verschieben</a>: Verschiebt eine Ansicht samt Inhalt auf ein anderes Blatt. Steht in <span style="font-size:small;color:green;">1.0 und neuer</span> nicht mehr zur Verf&uuml;gung.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ToggleFrame.svg&amp;filetimestamp=20241127175342&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ToggleFrame.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ToggleFrame.html" title="TechDraw ToggleFrame/de">Ansichtsrahmen ein- oder ausschalten</a>: Schaltet die Anzeige der Rahmen und Benennungen von Ansichten sowie der Knotenpunkte ein bzw. aus.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ToggleFrame.svg&amp;filetimestamp=20241127175342&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ToggleFrame.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ToggleFrame.html" title="TechDraw ToggleFrame/de">Ansichtsrahmen ein- oder ausschalten</a>: Schaltet die Anzeige der Rahmen und Benennungen von Ansichten sowie der Knotenpunkte ein bzw. aus. Steht in <span style="font-size:small;color:green;">1.1 und neuer</span> nicht mehr zur Verf&uuml;gung..</li></ul>
 <p><span id="Additional_features"></span>
 </p>
 <h2><span class="mw-headline" id="Zusatzfunktionen">Zusatzfunktionen</span></h2>
@@ -291,15 +291,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111220022
+Cached time: 20260111220408
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.316 seconds
-Real time usage: 0.874 seconds
-Preprocessor visited node count: 870/1000000
-Post&#8208;expand include size: 27425/2097152 bytes
-Template argument size: 10242/2097152 bytes
+CPU time usage: 0.284 seconds
+Real time usage: 0.429 seconds
+Preprocessor visited node count: 877/1000000
+Post&#8208;expand include size: 27488/2097152 bytes
+Template argument size: 10245/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -307,18 +307,18 @@ Unstrip post&#8208;expand size: 4462/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   94.867      1 -total
- 33.65%   31.925      1 Template:TechDraw_Tools_navi/de
- 25.51%   24.198      2 Template:Navigation_menu_2
- 17.88%   16.964      2 Template:Docnav/de
- 14.76%   14.004      1 Template:Userdocnavi/de
-  9.85%    9.341      5 Template:VersionPlus/de
-  9.66%    9.161     25 Template:Version/de
-  9.17%    8.703      1 Template:TOCright
-  2.27%    2.149      1 Template:KEY
+100.00%   24.672      1 -total
+ 27.29%    6.732      1 Template:TechDraw_Tools_navi/de
+ 13.94%    3.439      2 Template:Navigation_menu_2
+ 13.73%    3.389     25 Template:Version/de
+ 13.43%    3.314      6 Template:VersionPlus/de
+ 12.38%    3.055      2 Template:Docnav/de
+  7.95%    1.962      1 Template:Userdocnavi/de
+  7.53%    1.857      1 Template:KEY
+  7.04%    1.737      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111220021 and revision id 1736577. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111220408 and revision id 1736585. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
