--- a/wiki/de/TechDraw_AngleDimension.html
+++ b/wiki/de/TechDraw_AngleDimension.html
@@ -2,9 +2,9 @@
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../TechDraw_AngleDimension.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw AngleDimension (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/TechDraw_AngleDimension.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw Dimensi&oacute;n &Aacute;ngulo (21% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><a href="../fr/TechDraw_AngleDimension.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw Cote angulaire (84% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/TechDraw_AngleDimension.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Cote angulaire (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/TechDraw_AngleDimension.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw: Quota angolare (84% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/TechDraw_AngleDimension.html" class="mw-pt-progress mw-pt-progress--high" title="Rysunek Techniczny: Wstaw wymiar k&#261;ta (84% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/TechDraw_AngleDimension.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Wstaw wymiar k&#261;ta (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ro/TechDraw_AngleDimension.html" class="mw-pt-progress mw-pt-progress--med" title="Dimensiune Unghiular&#259; TechDraw (16% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../ru/TechDraw_AngleDimension.html" class="mw-pt-progress mw-pt-progress--med" title='TechDraw "&#1059;&#1082;&#1072;&#1079;&#1072;&#1090;&#1100; &#1091;&#1075;&#1083;&#1086;&#1074;&#1086;&#1081; &#1088;&#1072;&#1079;&#1084;&#1077;&#1088;" (37% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/TechDraw_AngleDimension.html" class="mw-pt-progress mw-pt-progress--high" title="&#44592;&#49696;&#46020;&#47732; &#44033;&#46020; &#52824;&#49688; (84% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
@@ -15,7 +15,6 @@
     <div><a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -26,7 +25,7 @@
 <th class="ctOdd">Men&uuml;eintrag
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Bema&szlig;ungen &rarr; Winkelma&szlig; einf&uuml;gen
+<td class="ctEven">TechDraw &rarr; Ma&szlig;eintr&auml;ge &rarr; Winkelma&szlig;
 </td></tr>
 <tr>
 <th class="ctOdd">Arbeitsbereich
@@ -55,7 +54,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
@@ -144,35 +142,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260110200228
+Cached time: 20260111220615
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.084 seconds
-Real time usage: 0.105 seconds
-Preprocessor visited node count: 367/1000000
-Post&#8208;expand include size: 28108/2097152 bytes
-Template argument size: 11158/2097152 bytes
+CPU time usage: 0.089 seconds
+Real time usage: 0.174 seconds
+Preprocessor visited node count: 366/1000000
+Post&#8208;expand include size: 28092/2097152 bytes
+Template argument size: 11142/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1980/5000000 bytes
+Unstrip post&#8208;expand size: 1990/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   25.461      1 -total
- 26.35%    6.708      1 Template:TechDraw_Tools_navi/de
- 17.84%    4.542      2 Template:Navigation_menu_2
- 11.48%    2.922      2 Template:Docnav/de
- 10.11%    2.574      1 Template:GuiCommand/de
-  9.67%    2.463      1 Template:Value
-  8.60%    2.189      1 Template:Version/de
-  7.85%    1.998      1 Template:VersionMinus/de
-  5.93%    1.510      1 Template:Userdocnavi/de
-  5.71%    1.455      1 Template:Caption
+100.00%   39.457      1 -total
+ 15.03%    5.932      1 Template:TechDraw_Tools_navi/de
+ 12.09%    4.770      1 Template:Userdocnavi/de
+ 11.84%    4.671      1 Template:Value
+ 11.46%    4.523      1 Template:Version/de
+ 10.64%    4.199      2 Template:Docnav/de
+ 10.47%    4.130      1 Template:GuiCommand/de
+  9.61%    3.790      3 Template:MenuCommand
+  8.71%    3.435      2 Template:Navigation_menu_2
+  7.46%    2.945      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:94033-0!canonical and timestamp 20260110200228 and revision id 1731884. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:94033-0!canonical and timestamp 20260111220615 and revision id 1736587. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
