--- a/wiki/de/TechDraw_AngleDimension.html
+++ b/wiki/de/TechDraw_AngleDimension.html
@@ -64,17 +64,15 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Anwendung">Anwendung</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>Zwei gerade Kanten ausw&auml;hlen. Die Geometrie kann in der <a href="../de/3D_View.html" title="3D View/de">3D-Ansicht</a> oder auf der Zeichnung ausgew&auml;hlt werden.</li>
 <li>Wurde Geometrie in der 3D-Ansicht ausgew&auml;hlt, muss die korrekte TechDraw-Ansicht durch Ausw&auml;hlen in der <a href="../de/Tree_View.html" title="Tree View/de">Baumansicht</a> zur Auswahl hinzugef&uuml;gt werden.</li>
 <li>Es gibt mehrere M&ouml;glichkeiten, das Werkzeug aufzurufen:
-<ul><li><span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span>: Ist die <a href="../de/TechDraw_Preferences.html#Ma%C3%9Feintr%C3%A4ge" title="TechDraw Preferences/de">Einstellung</a> <b>Ma&szlig;-Werkzeuge</b> auf <code>Einzelnes Werkzeug</code> (Standardeinstellung) gesetzt: Den Nach-unten-Pfeil rechts neben der Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=TechDraw_Dimension.svg&amp;filetimestamp=20241126214027&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Dimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow.svg&amp;filetimestamp=20210802183935&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow.svg" decoding="async" width="8" height="16" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span></span> dr&uuml;cken und die Men&uuml;option <b><span typeof="mw:File"><a href="../index.php?title=TechDraw_AngleDimension.svg&amp;filetimestamp=20241126214050&amp;.html" class="mw-file-description"><img src="../File/TechDraw_AngleDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Winkelma&szlig; einf&uuml;gen</b> in der Ausklappliste ausw&auml;hlen.</li>
-<li>Hat die Einstellung einen anderen Wert (und in <span style="font-size:small;color:blue;">0.21 und davor</span>): Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_AngleDimension.svg&amp;filetimestamp=20241126214050&amp;.html" class="mw-file-description"><img src="../File/TechDraw_AngleDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Winkelma&szlig; einf&uuml;gen</a></span> dr&uuml;cken.</li>
-<li>Den Men&uuml;eintrag <b>TechDraw &rarr; Ma&szlig;eintr&auml;ge &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_AngleDimension.svg&amp;filetimestamp=20241126214050&amp;.html" class="mw-file-description"><img src="../File/TechDraw_AngleDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Winkelma&szlig; einf&uuml;gen</b> ausw&auml;hlen.</li></ul></li>
+<ul><li><span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span>: Ist die <a href="../de/TechDraw_Preferences.html#Dimensions" title="TechDraw Preferences/de">Einstellung</a> <b>Werkzeuge f&uuml;r Ma&szlig;eintr&auml;ge</b> auf <code>Einzelnes Werkzeug</code> (Standardeinstellung) gesetzt: Den Nach-unten-Pfeil rechts neben der Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=TechDraw_Dimension.svg&amp;filetimestamp=20241126214027&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Dimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow.svg&amp;filetimestamp=20210802183935&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow.svg" decoding="async" width="8" height="16" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span></span> dr&uuml;cken und die Men&uuml;option <b><span typeof="mw:File"><a href="../index.php?title=TechDraw_AngleDimension.svg&amp;filetimestamp=20241126214050&amp;.html" class="mw-file-description"><img src="../File/TechDraw_AngleDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Winkelma&szlig;</b> in der Klappliste ausw&auml;hlen.</li>
+<li>Hat die Einstellung einen anderen Wert (und in <span style="font-size:small;color:blue;">0.21 und davor</span>): Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_AngleDimension.svg&amp;filetimestamp=20241126214050&amp;.html" class="mw-file-description"><img src="../File/TechDraw_AngleDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Winkelma&szlig;</a></span> dr&uuml;cken.</li>
+<li>Den Men&uuml;eintrag <b>TechDraw &rarr; Ma&szlig;eintr&auml;ge &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_AngleDimension.svg&amp;filetimestamp=20241126214050&amp;.html" class="mw-file-description"><img src="../File/TechDraw_AngleDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Winkelma&szlig;</b> ausw&auml;hlen.</li></ul></li>
 <li>Ein Ma&szlig; wird der Ansicht hinzugef&uuml;gt.</li>
 <li>Das Ma&szlig; kann an die gew&uuml;nschte Position gezogen werden.</li>
-<li>Falls erforderlich, k&ouml;nnen Toleranzen, wie auf der <a href="../de/TechDraw_Geometric_dimensioning_and_tolerancing.html#Toleranzen" title="TechDraw Geometric dimensioning and tolerancing/de">GD&amp;T-Seite</a> beschrieben, hinzugef&uuml;gt werden.</li></ol>
-</div>
+<li>Falls erforderlich, k&ouml;nnen Toleranzen, wie auf der <a href="../de/TechDraw_Geometric_dimensioning_and_tolerancing.html#Tolerances" title="TechDraw Geometric dimensioning and tolerancing/de">diese Seite</a> beschrieben, hinzugef&uuml;gt werden.</li></ol>
 <p><span id="Display_3D_measurement"></span>
 </p>
 <h3><span class="mw-headline" id="3D-Abmessungen_anzeigen">3D-Abmessungen anzeigen</span></h3>
@@ -142,15 +140,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111220615
+Cached time: 20260111220826
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.089 seconds
-Real time usage: 0.174 seconds
-Preprocessor visited node count: 366/1000000
-Post&#8208;expand include size: 28092/2097152 bytes
-Template argument size: 11142/2097152 bytes
+CPU time usage: 0.088 seconds
+Real time usage: 0.241 seconds
+Preprocessor visited node count: 365/1000000
+Post&#8208;expand include size: 28076/2097152 bytes
+Template argument size: 11126/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -158,19 +156,19 @@ Unstrip post&#8208;expand size: 1990/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   39.457      1 -total
- 15.03%    5.932      1 Template:TechDraw_Tools_navi/de
- 12.09%    4.770      1 Template:Userdocnavi/de
- 11.84%    4.671      1 Template:Value
- 11.46%    4.523      1 Template:Version/de
- 10.64%    4.199      2 Template:Docnav/de
- 10.47%    4.130      1 Template:GuiCommand/de
-  9.61%    3.790      3 Template:MenuCommand
-  8.71%    3.435      2 Template:Navigation_menu_2
-  7.46%    2.945      1 Template:Caption
+100.00%   36.855      1 -total
+ 30.62%   11.284      1 Template:TechDraw_Tools_navi/de
+ 23.89%    8.806      1 Template:Userdocnavi/de
+ 20.32%    7.488      2 Template:Navigation_menu_2
+ 12.12%    4.466      2 Template:Docnav/de
+  8.75%    3.226      1 Template:Value
+  6.15%    2.267      1 Template:GuiCommand/de
+  3.86%    1.423      1 Template:Incode
+  3.77%    1.391      1 Template:Version/de
+  3.71%    1.369      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:94033-0!canonical and timestamp 20260111220615 and revision id 1736587. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:94033-0!canonical and timestamp 20260111220826 and revision id 1736589. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
