--- a/wiki/de/TechDraw_AngleDimension.html
+++ b/wiki/de/TechDraw_AngleDimension.html
@@ -76,7 +76,7 @@
 <p><span id="Display_3D_measurement"></span>
 </p>
 <h3><span class="mw-headline" id="3D-Abmessungen_anzeigen">3D-Abmessungen anzeigen</span></h3>
-<p>Siehe <a href="../de/TechDraw_LengthDimension.html#3D-Abmessungen_anzeigen" title="TechDraw LengthDimension/de">TechDraw L&auml;ngenma&szlig;</a>.
+<p>Siehe <a href="../de/TechDraw_LengthDimension.html#Display_3D_measurement" title="TechDraw LengthDimension/de">TechDraw L&auml;ngenma&szlig;</a>.
 </p><p><span id="Change_properties"></span>
 </p>
 <h3><span class="mw-headline" id="Eigenschaften_anpassen">Eigenschaften anpassen</span></h3>
@@ -140,12 +140,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111220826
+Cached time: 20260111220854
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.088 seconds
-Real time usage: 0.241 seconds
+CPU time usage: 0.087 seconds
+Real time usage: 0.141 seconds
 Preprocessor visited node count: 365/1000000
 Post&#8208;expand include size: 28076/2097152 bytes
 Template argument size: 11126/2097152 bytes
@@ -156,19 +156,19 @@ Unstrip post&#8208;expand size: 1990/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   36.855      1 -total
- 30.62%   11.284      1 Template:TechDraw_Tools_navi/de
- 23.89%    8.806      1 Template:Userdocnavi/de
- 20.32%    7.488      2 Template:Navigation_menu_2
- 12.12%    4.466      2 Template:Docnav/de
-  8.75%    3.226      1 Template:Value
-  6.15%    2.267      1 Template:GuiCommand/de
-  3.86%    1.423      1 Template:Incode
-  3.77%    1.391      1 Template:Version/de
-  3.71%    1.369      1 Template:Caption
+100.00%   28.666      1 -total
+ 24.89%    7.136      1 Template:TechDraw_Tools_navi/de
+ 13.42%    3.848      2 Template:Navigation_menu_2
+ 11.53%    3.305      1 Template:GuiCommand/de
+  9.82%    2.815      1 Template:Userdocnavi/de
+  9.78%    2.803      2 Template:Docnav/de
+  9.77%    2.802      1 Template:Value
+  7.82%    2.241      1 Template:Version/de
+  7.68%    2.202      2 Template:Button
+  7.12%    2.042      1 Template:VersionMinus/de
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:94033-0!canonical and timestamp 20260111220826 and revision id 1736589. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:94033-0!canonical and timestamp 20260111220854 and revision id 1736591. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
