Created page with "Zobrazení vlastností má dvě záložky, které umožňují přístup ke dvěma třídám vlastností: * '''Data''' vlastností, související s "fyzickými" parametry objektu. '''Data''' vlastností definují základní charakteristiky objektu. Existují vždy, i když je FreeCAD používán v konzolovém režimu nebo jako knihovna. To znamená, že pokud načtete dokument v režimu konzoly, můžete upravit poloměr kruhu nebo délku čáry, i když výsledek na obra..."

--- a/wiki/cs/Property_View.html
+++ b/wiki/cs/Property_View.html
@@ -53,10 +53,10 @@ App::PropertyVector
 <p><span id="View_and_Data_properties"></span>
 </p>
 <h2><span id="Zobrazen.C3.AD_a_data_vlastnost.C3.AD"></span><span class="mw-headline" id="Zobrazen&iacute;_a_data_vlastnost&iacute;">Zobrazen&iacute; a data vlastnost&iacute;</span></h2>
-<p>The Property View has two tabs giving access to two classes of properties:
+<p>Zobrazen&iacute; vlastnost&iacute; m&aacute; dv&#283; z&aacute;lo&#382;ky, kter&eacute; umo&#382;&#328;uj&iacute; p&#345;&iacute;stup ke dv&#283;ma t&#345;&iacute;d&aacute;m vlastnost&iacute;:
 </p>
-<ul><li><b>Data</b> properties, related to the "physical" parameters of the object. The <b>Data</b> properties define the essential characteristics of the object. They exist at all times, even when FreeCAD is used in console mode, or as a library. This means that if you load a document in console mode, you can edit the radius of a circle or the length of a line, even if you cannot see the result on the screen.</li>
-<li><b>View</b> properties, related to the "visual" appearance of the object. The <b>View</b> properties are tied to the <code>ViewObject</code> of the object, and are only accessible when the graphical user interface (GUI) is loaded. They are not accessible when using FreeCAD in console mode, or as a headless library. By default changes to View properties are not added to the undo stack and cannot be undone and redone with <a href="../Std_Undo.html" title="Std Undo">Std Undo</a> and <a href="../Std_Redo.html" title="Std Redo">Std Redo</a>. But it is possible to change this by setting the <a href="../Fine-tuning.html" title="Fine-tuning">fine-tuning</a> parameter <b>AutoTransactionView</b> to <code>true</code>.</li></ul>
+<ul><li><b>Data</b> vlastnost&iacute;, souvisej&iacute;c&iacute; s "fyzick&yacute;mi" parametry objektu. <b>Data</b> vlastnost&iacute; definuj&iacute; z&aacute;kladn&iacute; charakteristiky objektu. Existuj&iacute; v&#382;dy, i kdy&#382; je FreeCAD pou&#382;&iacute;v&aacute;n v konzolov&eacute;m re&#382;imu nebo jako knihovna. To znamen&aacute;, &#382;e pokud na&#269;tete dokument v re&#382;imu konzoly, m&#367;&#382;ete upravit polom&#283;r kruhu nebo d&eacute;lku &#269;&aacute;ry, i kdy&#382; v&yacute;sledek na obrazovce nevid&iacute;te.</li>
+<li><b>Zobrazen&iacute;</b> vlastnost&iacute; souvisej&iacute;c&iacute; s "vizu&aacute;ln&iacute;m" vzhledem objektu. <b>Zobrazen&iacute;</b> vlastnost&iacute; jsou v&aacute;z&aacute;ny na <code>ViewObject</code> objektu a jsou p&#345;&iacute;stupn&eacute; pouze p&#345;i na&#269;ten&iacute; grafick&eacute;ho u&#382;ivatelsk&eacute;ho rozhran&iacute; (GUI). Nejsou p&#345;&iacute;stupn&eacute; p&#345;i pou&#382;&iacute;v&aacute;n&iacute; FreeCADu v konzolov&eacute;m re&#382;imu nebo jako bezhlavou knihovnu. Ve v&yacute;choz&iacute;m nastaven&iacute; se zm&#283;ny vlastnost&iacute; zobrazen&iacute; nep&#345;id&aacute;vaj&iacute; do z&aacute;sobn&iacute;ku zp&#283;tn&yacute;ch akc&iacute; a nelze je vr&aacute;tit zp&#283;t ani opakovat pomoc&iacute; <a href="../Std_Undo.html" title="Std Undo">Std Undo</a> a <a href="../Std_Redo.html" title="Std Redo">Std Redo</a>. Toto nastaven&iacute; je v&scaron;ak mo&#382;n&eacute; zm&#283;nit nastaven&iacute;m parametru <a href="../Fine-tuning.html" title="Fine-tuning">fine-tuning</a> <b>AutoTransactionView</b> na <code>true</code>.</li></ul>
 <h2><span class="mw-headline" id="Basic_properties">Basic properties</span></h2>
 <p>Different objects may have different properties. However, many objects have the same properties because they are derived from the same internal class.
 </p><p>Most geometrical objects that can be created and displayed in the <a href="../3D_View.html" title="3D View">3D View</a> are derived from a <code>Part::Feature</code>. See <a href="../Part_Feature.html" title="Part Feature">Part Feature</a> for the basic properties these objects have.
@@ -167,12 +167,12 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111220204
+Cached time: 20260111221110
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.142 seconds
-Real time usage: 0.301 seconds
+CPU time usage: 0.110 seconds
+Real time usage: 0.181 seconds
 Preprocessor visited node count: 702/1000000
 Post&#8208;expand include size: 32437/2097152 bytes
 Template argument size: 12580/2097152 bytes
@@ -183,19 +183,19 @@ Unstrip post&#8208;expand size: 4003/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   68.816      1 -total
- 15.31%   10.537      1 Template:Std_Base_navi/cs
- 13.51%    9.294      1 Template:Interface_navi/cs
- 12.61%    8.677      1 Template:PropertyData
- 11.37%    7.827      3 Template:Navigation_menu_2
- 10.90%    7.500      1 Template:Code
- 10.03%    6.903      1 Template:Userdocnavi/cs
-  6.98%    4.805     26 Template:MenuCommand
-  6.15%    4.234      2 Template:Value
-  5.37%    3.696      1 Template:Variable
+100.00%   52.690      1 -total
+ 20.75%   10.932      1 Template:Std_Base_navi/cs
+ 19.90%   10.484      1 Template:Interface_navi/cs
+ 14.57%    7.678      3 Template:Navigation_menu_2
+  9.45%    4.977      1 Template:Userdocnavi/cs
+  8.25%    4.347      1 Template:PropertyData
+  7.39%    3.894      1 Template:Caption
+  4.91%    2.589      1 Template:Code
+  4.78%    2.520      2 Template:Value
+  4.67%    2.463     26 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260111220203 and revision id 1736583. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260111221109 and revision id 1736601. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
