Updated page TechDraw Balloon/de

--- a/wiki/de/TechDraw_Balloon.html
+++ b/wiki/de/TechDraw_Balloon.html
@@ -13,7 +13,6 @@
     <div><a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -24,7 +23,7 @@
 <th class="ctOdd">Men&uuml;eintrag
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Anmerkungen &rarr; Hinweisfeld einf&uuml;gen
+<td class="ctEven">TechDraw &rarr; Beschriftungen &rarr; Hinweisfeld
 </td></tr>
 <tr>
 <th class="ctOdd">Arbeitsbereich
@@ -53,7 +52,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
@@ -174,15 +172,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111221320
+Cached time: 20260111221505
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.105 seconds
-Real time usage: 0.182 seconds
-Preprocessor visited node count: 811/1000000
-Post&#8208;expand include size: 31157/2097152 bytes
-Template argument size: 11941/2097152 bytes
+CPU time usage: 0.112 seconds
+Real time usage: 0.295 seconds
+Preprocessor visited node count: 810/1000000
+Post&#8208;expand include size: 31143/2097152 bytes
+Template argument size: 11927/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -190,19 +188,19 @@ Unstrip post&#8208;expand size: 2314/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   42.348      1 -total
- 21.80%    9.232     12 Template:PropertyData/de
- 14.89%    6.304      1 Template:Code
- 13.85%    5.867      2 Template:Docnav/de
- 13.69%    5.797      1 Template:TechDraw_Tools_navi/de
- 12.46%    5.276     17 Template:Variable
-  8.07%    3.418      1 Template:GuiCommand/de
-  8.06%    3.415      5 Template:PropertyView/de
-  7.85%    3.326      2 Template:Navigation_menu_2
-  7.14%    3.022      1 Template:Button
+100.00%   42.356      1 -total
+ 23.93%   10.136      1 Template:TechDraw_Tools_navi/de
+ 15.80%    6.691     12 Template:PropertyData/de
+ 15.54%    6.580      5 Template:PropertyView/de
+ 14.88%    6.304      2 Template:Navigation_menu_2
+ 11.63%    4.927     17 Template:Variable
+  9.01%    3.818      1 Template:Code
+  7.29%    3.089      1 Template:GuiCommand/de
+  7.04%    2.981      1 Template:Userdocnavi/de
+  6.91%    2.928      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:174884-0!canonical and timestamp 20260111221320 and revision id 1736609. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:174884-0!canonical and timestamp 20260111221505 and revision id 1736612. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
