Created page with "V případě 2D geometrie je většina objektů odvozena od {{incode|Part::Part2DObject}} (který je sám odvozen od {{incode|Part::Feature}}) což je základ [[Sketch/cs|Skic]] a většiny [[Draft_Workbench/cs|Návrhů objektů]]. Základní vlastnosti těchto objektů najdete v sekci [[Part_Part2DObject/cs|Part Part2DObject]]."

--- a/wiki/cs/Property_View.html
+++ b/wiki/cs/Property_View.html
@@ -62,7 +62,7 @@ App::PropertyVector
 <h2><span id="Z.C3.A1kladn.C3.AD_vlastnosti"></span><span class="mw-headline" id="Z&aacute;kladn&iacute;_vlastnosti">Z&aacute;kladn&iacute; vlastnosti</span></h2>
 <p>R&#367;zn&eacute; objekty mohou m&iacute;t r&#367;zn&eacute; vlastnosti. Mnoho objekt&#367; v&scaron;ak m&aacute; stejn&eacute; vlastnosti, proto&#382;e jsou odvozeny ze stejn&eacute; vnit&#345;n&iacute; t&#345;&iacute;dy.
 </p><p>V&#283;t&scaron;ina geometrick&yacute;ch objekt&#367;, kter&eacute; lze vytvo&#345;it a zobrazit v <a href="../index.php?title=3D_View/cs&amp;action=edit&amp;redlink=1.html" class="new" title="3D View/cs (page does not exist)">3D zobrazen&iacute;</a>, je odvozena od <code>Part::Feature</code>. Z&aacute;kladn&iacute; vlastnosti t&#283;chto objekt&#367; najdete v sekci <a href="../index.php?title=Part_Feature/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Part Feature/cs (page does not exist)">Vlastnosti d&iacute;lu</a>.
-</p><p>For 2D geometry, most objects are derived from a <code>Part::Part2DObject</code> (itself derived from a <code>Part::Feature</code>) which is the base of <a href="../Sketch.html" title="Sketch">Sketches</a>, and most <a href="../Draft_Workbench.html" title="Draft Workbench">Draft objects</a>. See <a href="../Part_Part2DObject.html" title="Part Part2DObject">Part Part2DObject</a> for the basic properties these objects have.
+</p><p>V p&#345;&iacute;pad&#283; 2D geometrie je v&#283;t&scaron;ina objekt&#367; odvozena od <code>Part::Part2DObject</code> (kter&yacute; je s&aacute;m odvozen od <code>Part::Feature</code>) co&#382; je z&aacute;klad <a href="../index.php?title=Sketch/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Sketch/cs (page does not exist)">Skic</a> a v&#283;t&scaron;iny <a href="../cs/Draft_Workbench.html" title="Draft Workbench/cs">N&aacute;vrh&#367; objekt&#367;</a>. Z&aacute;kladn&iacute; vlastnosti t&#283;chto objekt&#367; najdete v sekci <a href="../index.php?title=Part_Part2DObject/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Part Part2DObject/cs (page does not exist)">Part Part2DObject</a>.
 </p>
 <h2><span class="mw-headline" id="Context_menu">Context menu</span></h2>
 <p>To display the context menu of the Property View right-click the background, or right-click a property.
@@ -169,12 +169,12 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111221733
+Cached time: 20260111222415
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.125 seconds
-Real time usage: 0.194 seconds
+CPU time usage: 0.118 seconds
+Real time usage: 0.217 seconds
 Preprocessor visited node count: 703/1000000
 Post&#8208;expand include size: 32437/2097152 bytes
 Template argument size: 12580/2097152 bytes
@@ -185,19 +185,19 @@ Unstrip post&#8208;expand size: 4003/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   58.030      1 -total
- 17.79%   10.321      1 Template:Std_Base_navi/cs
- 14.05%    8.151      1 Template:Interface_navi/cs
- 13.93%    8.086      3 Template:Navigation_menu_2
- 13.43%    7.795      1 Template:Userdocnavi/cs
- 12.86%    7.460      1 Template:TRUE
-  7.45%    4.325      1 Template:PropertyData
-  5.04%    2.924     26 Template:MenuCommand
-  4.31%    2.501      2 Template:Value
-  4.14%    2.403      1 Template:Code
+100.00%   67.322      1 -total
+ 18.08%   12.170      1 Template:Std_Base_navi/cs
+ 16.20%   10.908      1 Template:Interface_navi/cs
+ 12.40%    8.347      3 Template:Navigation_menu_2
+ 10.39%    6.998     26 Template:MenuCommand
+  9.42%    6.343      1 Template:Userdocnavi/cs
+  7.86%    5.289      3 Template:Version
+  6.51%    4.384      1 Template:PropertyData
+  4.74%    3.188      1 Template:TRUE
+  4.58%    3.083      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260111221733 and revision id 1736621. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260111222415 and revision id 1736631. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
