Created page with "== Kontextové menu =="

--- a/wiki/cs/Property_View.html
+++ b/wiki/cs/Property_View.html
@@ -63,8 +63,9 @@ App::PropertyVector
 <p>R&#367;zn&eacute; objekty mohou m&iacute;t r&#367;zn&eacute; vlastnosti. Mnoho objekt&#367; v&scaron;ak m&aacute; stejn&eacute; vlastnosti, proto&#382;e jsou odvozeny ze stejn&eacute; vnit&#345;n&iacute; t&#345;&iacute;dy.
 </p><p>V&#283;t&scaron;ina geometrick&yacute;ch objekt&#367;, kter&eacute; lze vytvo&#345;it a zobrazit v <a href="../index.php?title=3D_View/cs&amp;action=edit&amp;redlink=1.html" class="new" title="3D View/cs (page does not exist)">3D zobrazen&iacute;</a>, je odvozena od <code>Part::Feature</code>. Z&aacute;kladn&iacute; vlastnosti t&#283;chto objekt&#367; najdete v sekci <a href="../index.php?title=Part_Feature/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Part Feature/cs (page does not exist)">Vlastnosti d&iacute;lu</a>.
 </p><p>V p&#345;&iacute;pad&#283; 2D geometrie je v&#283;t&scaron;ina objekt&#367; odvozena od <code>Part::Part2DObject</code> (kter&yacute; je s&aacute;m odvozen od <code>Part::Feature</code>) co&#382; je z&aacute;klad <a href="../index.php?title=Sketch/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Sketch/cs (page does not exist)">Skic</a> a v&#283;t&scaron;iny <a href="../cs/Draft_Workbench.html" title="Draft Workbench/cs">N&aacute;vrh&#367; objekt&#367;</a>. Z&aacute;kladn&iacute; vlastnosti t&#283;chto objekt&#367; najdete v sekci <a href="../index.php?title=Part_Part2DObject/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Part Part2DObject/cs (page does not exist)">Part Part2DObject</a>.
+</p><p><span id="Context_menu"></span>
 </p>
-<h2><span class="mw-headline" id="Context_menu">Context menu</span></h2>
+<h2><span id="Kontextov.C3.A9_menu"></span><span class="mw-headline" id="Kontextov&eacute;_menu">Kontextov&eacute; menu</span></h2>
 <p>To display the context menu of the Property View right-click the background, or right-click a property.
 </p><p>Right-clicking the background shows three options:
 </p>
@@ -169,13 +170,13 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111222415
+Cached time: 20260111222437
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.118 seconds
-Real time usage: 0.217 seconds
-Preprocessor visited node count: 703/1000000
+CPU time usage: 0.125 seconds
+Real time usage: 0.245 seconds
+Preprocessor visited node count: 704/1000000
 Post&#8208;expand include size: 32437/2097152 bytes
 Template argument size: 12580/2097152 bytes
 Highest expansion depth: 7/100
@@ -185,19 +186,19 @@ Unstrip post&#8208;expand size: 4003/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   67.322      1 -total
- 18.08%   12.170      1 Template:Std_Base_navi/cs
- 16.20%   10.908      1 Template:Interface_navi/cs
- 12.40%    8.347      3 Template:Navigation_menu_2
- 10.39%    6.998     26 Template:MenuCommand
-  9.42%    6.343      1 Template:Userdocnavi/cs
-  7.86%    5.289      3 Template:Version
-  6.51%    4.384      1 Template:PropertyData
-  4.74%    3.188      1 Template:TRUE
-  4.58%    3.083      2 Template:Docnav
+100.00%   79.999      1 -total
+ 21.29%   17.032      2 Template:Docnav
+ 12.90%   10.323      1 Template:Std_Base_navi/cs
+ 10.39%    8.310      1 Template:Interface_navi/cs
+ 10.02%    8.014      3 Template:Navigation_menu_2
+  7.98%    6.382      1 Template:PropertyData
+  7.91%    6.331      1 Template:TOCright
+  7.82%    6.260      1 Template:Userdocnavi/cs
+  5.54%    4.432      1 Template:Code
+  4.57%    3.659      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260111222415 and revision id 1736631. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260111222436 and revision id 1736633. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
