Created page with "Kliknutím pravým tlačítkem myši na pozadí se zobrazí tři možnosti:"

--- a/wiki/cs/Property_View.html
+++ b/wiki/cs/Property_View.html
@@ -67,7 +67,7 @@ App::PropertyVector
 </p>
 <h2><span id="Kontextov.C3.A9_menu"></span><span class="mw-headline" id="Kontextov&eacute;_menu">Kontextov&eacute; menu</span></h2>
 <p>Chcete-li zobrazit kontextov&eacute; menu okna Vlastnosti, klikn&#283;te prav&yacute;m tla&#269;&iacute;tkem my&scaron;i na pozad&iacute; nebo na n&#283;kterou z vlastnost&iacute;.
-</p><p>Right-clicking the background shows three options:
+</p><p>Kliknut&iacute;m prav&yacute;m tla&#269;&iacute;tkem my&scaron;i na pozad&iacute; se zobraz&iacute; t&#345;i mo&#382;nosti:
 </p>
 <ul><li><b>Add Property</b>: adds a dynamic property to the object.</li></ul>
 <ul><li><b>Expand/Collapse Properties</b>: <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li></ul>
@@ -170,12 +170,12 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111222513
+Cached time: 20260111222607
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.124 seconds
-Real time usage: 0.346 seconds
+CPU time usage: 0.111 seconds
+Real time usage: 0.173 seconds
 Preprocessor visited node count: 704/1000000
 Post&#8208;expand include size: 32437/2097152 bytes
 Template argument size: 12580/2097152 bytes
@@ -186,19 +186,19 @@ Unstrip post&#8208;expand size: 4003/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   94.324      1 -total
- 18.14%   17.107      1 Template:Std_Base_navi/cs
- 15.40%   14.526      1 Template:Interface_navi/cs
- 14.22%   13.415      3 Template:Navigation_menu_2
- 13.59%   12.821      1 Template:Userdocnavi/cs
- 12.17%   11.475      1 Template:PropertyData
-  8.63%    8.137      6 Template:Incode
-  5.35%    5.051      2 Template:Value
-  4.10%    3.871      2 Template:Docnav
-  3.90%    3.674      1 Template:Code
+100.00%   43.048      1 -total
+ 19.72%    8.489      1 Template:Std_Base_navi/cs
+ 16.60%    7.148      1 Template:Interface_navi/cs
+ 15.04%    6.476      3 Template:Navigation_menu_2
+ 12.59%    5.418      1 Template:Userdocnavi/cs
+  8.26%    3.555      1 Template:PropertyData
+  6.57%    2.829     26 Template:MenuCommand
+  6.50%    2.799      2 Template:Docnav
+  4.44%    1.910      2 Template:Value
+  4.05%    1.742      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260111222512 and revision id 1736635. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260111222607 and revision id 1736637. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
