Created page with "==Skriptování=="

--- a/wiki/cs/Property_View.html
+++ b/wiki/cs/Property_View.html
@@ -97,7 +97,9 @@ App::PropertyVector
 <dl><dd><ul><li><b>Touched</b>: if active, the object becomes touched, and ready for recompute.</li></ul></dd></dl>
 <dl><dd><ul><li><b>EvalOnRestore</b>: if active, the property is evaluated when the document is restored.</li></ul></dd></dl>
 <dl><dd><ul><li><b>CopyOnChange</b>: if active, the property is copied when changed in a Link. The Link's <span style="font-size:60%; padding-right:0.8em;">&Uacute;daje</span><b>Link Copy On Change</b> property must be set to <code>Tracking</code> or <code>Enabled</code> for this to work. This is related to <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?p=738833#p738833">Variant Links</a>.</li></ul></dd></dl>
-<h2><span class="mw-headline" id="Scripting">Scripting</span></h2>
+<p><span id="Scripting"></span>
+</p>
+<h2><span id="Skriptov.C3.A1n.C3.AD"></span><span class="mw-headline" id="Skriptov&aacute;n&iacute;">Skriptov&aacute;n&iacute;</span></h2>
 <p>See <a href="../FeaturePython_Custom_Properties.html" title="FeaturePython Custom Properties">FeaturePython Custom Properties</a>.
 </p>
 <h2><span class="mw-headline" id="Preferences">Preferences</span></h2>
@@ -170,13 +172,13 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111222607
+Cached time: 20260111222659
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.111 seconds
-Real time usage: 0.173 seconds
-Preprocessor visited node count: 704/1000000
+CPU time usage: 0.113 seconds
+Real time usage: 0.232 seconds
+Preprocessor visited node count: 705/1000000
 Post&#8208;expand include size: 32437/2097152 bytes
 Template argument size: 12580/2097152 bytes
 Highest expansion depth: 7/100
@@ -186,19 +188,19 @@ Unstrip post&#8208;expand size: 4003/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   43.048      1 -total
- 19.72%    8.489      1 Template:Std_Base_navi/cs
- 16.60%    7.148      1 Template:Interface_navi/cs
- 15.04%    6.476      3 Template:Navigation_menu_2
- 12.59%    5.418      1 Template:Userdocnavi/cs
-  8.26%    3.555      1 Template:PropertyData
-  6.57%    2.829     26 Template:MenuCommand
-  6.50%    2.799      2 Template:Docnav
-  4.44%    1.910      2 Template:Value
-  4.05%    1.742      1 Template:TOCright
+100.00%   79.254      1 -total
+ 28.57%   22.645      1 Template:Std_Base_navi/cs
+ 12.70%   10.067      1 Template:Userdocnavi/cs
+ 12.37%    9.805      3 Template:Navigation_menu_2
+ 12.13%    9.616      1 Template:Interface_navi/cs
+  9.37%    7.430      2 Template:Docnav
+  4.74%    3.759      2 Template:Value
+  4.41%    3.499     26 Template:MenuCommand
+  4.37%    3.465      1 Template:PropertyData
+  3.24%    2.568      1 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260111222607 and revision id 1736637. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260111222659 and revision id 1736639. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
