Updated page TechDraw Annotation/de

--- a/wiki/de/TechDraw_Annotation.html
+++ b/wiki/de/TechDraw_Annotation.html
@@ -62,18 +62,16 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Anwendung">Anwendung</span></h2>
-<div class="mw-translate-fuzzy">
-<ol><li>Wenn mehrere Zeichnungsbl&auml;tter im Dokument vorhanden sind: Wahlweise das gew&uuml;nschte Zeichnungsblatt durch Auswahl in der <a href="../de/Tree_view.html" class="mw-redirect" title="Tree view/de">Baumansicht</a> aktivieren.</li>
+<ol><li>Wenn mehrere Zeichnungsbl&auml;tter im Dokument vorhanden sind: Wahlweise das gew&uuml;nschte Zeichnungsblatt durch Auswahl in der <a href="../de/Tree_View.html" title="Tree View/de">Baumansicht</a> aktivieren.</li>
 <li>Es gibt mehrere M&ouml;glichkeiten, das Werkzeug aufzurufen:
-<ul><li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_Annotation.svg&amp;filetimestamp=20241127175332&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Annotation.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../TechDraw_Annotation.html" title="TechDraw Annotation">Anmerkung einf&uuml;gen</a></span> dr&uuml;cken.</li>
-<li>Den Men&uuml;eintrag <b>TechDraw &rarr; Anmerkungen &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_Annotation.svg&amp;filetimestamp=20241127175332&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Annotation.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Anmerkung einf&uuml;gen</b> ausw&auml;hlen.</li></ul></li>
+<ul><li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_Annotation.svg&amp;filetimestamp=20241127175332&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Annotation.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Beschriftung</a></span> dr&uuml;cken.</li>
+<li>Den Men&uuml;eintrag <b>TechDraw &rarr; Beschriftungen &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_Annotation.svg&amp;filetimestamp=20241127175332&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Annotation.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Beschriftungstext</b> ausw&auml;hlen.</li></ul></li>
 <li>Wenn mehrere Zeichnungsbl&auml;tter im Dokument vorhanden sind und noch kein Blatt aktiviert wurde, wird das Dialogfeld <b>Blattauswahl</b> ge&ouml;ffnet:
 <ol><li>Das gew&uuml;nschte Blatt ausw&auml;hlen.</li>
 <li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> dr&uuml;cken.</li></ol></li>
 <li>Ein Textblock mit <i>Default Text</i> erscheint auf der Zeichnung.</li>
-<li>Zum Bearbeiten des Textes wird der  <a href="../de/Property_editor.html" class="mw-redirect" title="Property editor/de"> Eigenschafteneditor</a> verwendet.</li>
+<li>Zum Bearbeiten des Textes wird die <a href="../de/Property_View.html" title="Property View/de">Eigenschaften-Ansicht</a> verwendet.</li>
 <li>Wahlweise den Textblock auf die gew&uuml;nschte Position ziehen.</li></ol>
-</div>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=UpdateAnnotation.png&amp;filetimestamp=20160826145146&amp;.html" class="mw-file-description"><img src="../File/UpdateAnnotation.png" decoding="async" width="367" height="251" class="mw-file-element" data-file-width="367" data-file-height="251"></a></span>
 </p>
 <div class="mw-translate-fuzzy">
@@ -157,15 +155,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111222248
+Cached time: 20260111222703
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.092 seconds
-Real time usage: 0.195 seconds
-Preprocessor visited node count: 634/1000000
-Post&#8208;expand include size: 31169/2097152 bytes
-Template argument size: 11836/2097152 bytes
+CPU time usage: 0.102 seconds
+Real time usage: 0.189 seconds
+Preprocessor visited node count: 633/1000000
+Post&#8208;expand include size: 31166/2097152 bytes
+Template argument size: 11833/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -173,19 +171,19 @@ Unstrip post&#8208;expand size: 2655/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   72.235      1 -total
- 16.09%   11.625      1 Template:GuiCommand/de
- 15.92%   11.499      9 Template:PropertyData/de
- 10.93%    7.896      1 Template:TechDraw_Tools_navi/de
- 10.25%    7.406      2 Template:Caption
-  9.79%    7.070      6 Template:Incode
-  8.83%    6.375      2 Template:Docnav/de
-  7.28%    5.258      2 Template:Button
-  7.10%    5.131      9 Template:Variable
-  6.77%    4.888      2 Template:MenuCommand
+100.00%   47.671      1 -total
+ 18.09%    8.625      9 Template:PropertyData/de
+ 14.41%    6.870      1 Template:TechDraw_Tools_navi/de
+ 14.26%    6.796      1 Template:GuiCommand/de
+ 11.36%    5.413      2 Template:Docnav/de
+  9.81%    4.675      9 Template:Variable
+  8.21%    3.916      2 Template:Navigation_menu_2
+  7.75%    3.693      2 Template:MenuCommand
+  7.51%    3.581      1 Template:Userdocnavi/de
+  6.67%    3.181      2 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:193912-0!canonical and timestamp 20260111222248 and revision id 1736629. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:193912-0!canonical and timestamp 20260111222702 and revision id 1736641. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
