Updated page TechDraw Annotation/de

--- a/wiki/de/TechDraw_Annotation.html
+++ b/wiki/de/TechDraw_Annotation.html
@@ -74,9 +74,7 @@
 <li>Wahlweise den Textblock auf die gew&uuml;nschte Position ziehen.</li></ol>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=UpdateAnnotation.png&amp;filetimestamp=20160826145146&amp;.html" class="mw-file-description"><img src="../File/UpdateAnnotation.png" decoding="async" width="367" height="251" class="mw-file-element" data-file-width="367" data-file-height="251"></a></span>
 </p>
-<div class="mw-translate-fuzzy">
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">&Auml;ndern der Beschriftung im Eigenschafteneditor</p>
-</div>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">&Auml;ndern der Beschriftung in der Eigenschaften-Ansicht</p>
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Hinweise">Hinweise</span></h2>
@@ -155,15 +153,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111222703
+Cached time: 20260111222747
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.102 seconds
-Real time usage: 0.189 seconds
-Preprocessor visited node count: 633/1000000
-Post&#8208;expand include size: 31166/2097152 bytes
-Template argument size: 11833/2097152 bytes
+CPU time usage: 0.091 seconds
+Real time usage: 0.200 seconds
+Preprocessor visited node count: 632/1000000
+Post&#8208;expand include size: 31178/2097152 bytes
+Template argument size: 11839/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -171,19 +169,19 @@ Unstrip post&#8208;expand size: 2655/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   47.671      1 -total
- 18.09%    8.625      9 Template:PropertyData/de
- 14.41%    6.870      1 Template:TechDraw_Tools_navi/de
- 14.26%    6.796      1 Template:GuiCommand/de
- 11.36%    5.413      2 Template:Docnav/de
-  9.81%    4.675      9 Template:Variable
-  8.21%    3.916      2 Template:Navigation_menu_2
-  7.75%    3.693      2 Template:MenuCommand
-  7.51%    3.581      1 Template:Userdocnavi/de
-  6.67%    3.181      2 Template:Caption
+100.00%   65.062      1 -total
+ 32.92%   21.419      1 Template:TechDraw_Tools_navi/de
+ 22.69%   14.763      2 Template:Navigation_menu_2
+ 14.44%    9.395      1 Template:GuiCommand/de
+ 10.50%    6.830      9 Template:PropertyData/de
+  9.26%    6.023      2 Template:Caption
+  7.24%    4.710      1 Template:Userdocnavi/de
+  6.87%    4.467      2 Template:Docnav/de
+  4.37%    2.841      1 Template:Code
+  4.15%    2.702      9 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:193912-0!canonical and timestamp 20260111222702 and revision id 1736641. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:193912-0!canonical and timestamp 20260111222747 and revision id 1736643. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
